# csv-reports-test

./: .gitignore  README.md  main.py  pyproject.toml
src/csv_reports/: __init__.py  cli.py  errors.py  io.py  models.py  render.py  service.py
src/csv_reports/reports/: base.py  performance.py  registry.py
tests/: conftest.py  test_cli.py  test_io.py  test_registry.py  test_render.py  test_report_performance.py
