[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-reports"
version = "0.1.0"
description = "CLI to generate console reports from CSV files (stdlib + tabulate)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "tabulate>=0.9",
]

[tool.pytest.ini_options]
addopts = "-q --cov=src/csv_reports --cov-report=term-missing"
testpaths = ["tests"]

# --- Code style / linters ---

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["csv_reports"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort (import order)
  "B",  # bugbear
  "W",  # pycodestyle warnings
]
# Можно точечно отключать правила при необходимости:
# ignore = []
